# ai-langchain

./: pyproject.toml
src/: main.py
src/middleware/: error_handling.py  monitoring.py
src/model/: context.py  response.py
src/prompt/: system_prompts.py
src/tool/: location.py  weather.py
